# forecast-rs

./: Cargo.toml
src/: lib.rs  tests.rs
tests/: integration_test.rs
