[package]
name = "forecast"
description = "A Rust client for the Dark Sky API."
readme = "README.md"
license = "Apache-2.0"
documentation = "https://jgrillo.github.io/forecast-rs/"
repository = "https://github.com/jgrillo/forecast-rs"
keywords = ["forecast", "weather", "darksky"]
version = "2.0.0"
authors = ["Jesse C. Grillo <jesse.grillo@gmail.com>"]
edition = "2018"

[features]
integration = []

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
reqwest = {version = "0.10", default-features = false, features = ["blocking", "json"]}
itertools = "0.8"
